--- a/app/src/css/quasar.variables.scss
+++ b/app/src/css/quasar.variables.scss
@@ -12,7 +12,7 @@
 // to match your app's branding.
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 
-$primary: #4e4571;
+$primary: #684485;
 $secondary: #26a69a;
 $accent: #9c27b0;
 
